Fix layout for 'forgot password' dialog. Add modification class sh-button--less-margin to remove unnecessary margin-right. Refactor sign-up form. Add some fixes for footer links. Apply max-width and media for sh-dialog. Decrease padding for form-wrapper on mobile devices. Delete unnecessary media.

--- a/src/assets/sass/buttons.sass
+++ b/src/assets/sass/buttons.sass
@@ -45,3 +45,8 @@ a.sh-button
     padding: 0 15px
     &:not([disabled]):hover
       color: $sh-text
+    @media only screen and (max-width: 599px)
+      margin-bottom: 5px
+
+  &--less-margin
+    margin-right: 0
