--- a/src/assets/sass/forms.sass
+++ b/src/assets/sass/forms.sass
@@ -18,10 +18,6 @@
     @media only screen and (max-width: 959px)
       min-width: 270px
       width: 100%
-    @media only screen and (max-width: 599px)
-      min-width: 100%
-      width: 100%
-
 
 .sh-label
   font-size: 13px
